@@ -56,6 +56,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #5230: pydoc would report no documentation found if a module generated
+  a 'not found' import error when loaded; it now reports the import errors.
+  Thanks to Lucas Prado Melo for initial fix and collaboration on the tests.
+
 - Issue #6274: Fixed possible file descriptors leak in subprocess.py
 
 - Issue #6271: mmap tried to close invalid file handle (-1) when annonymous.
